--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -1,7 +1,7 @@
-<md-toolbar class="md-medium-tall">
+<md-toolbar class="md-medium-tall" >
   <div class="md-toolbar-tools">
     <span flex></span>
-    <md-button class="md-raised" ng-click="">Registrate</md-button>
-    <md-button class="md-raised" ng-click="">Iniciar Sesión</md-button>
+    <md-button class="md-raised" ng-click="go('/register')">Registrate</md-button>
+    <md-button class="md-raised" ng-click="go('/login')">Iniciar Sesión</md-button>
   </div>
 </md-toolbar>
