agregue el header en el form de registrar

--- a/public/app/register/src/html/register.html
+++ b/public/app/register/src/html/register.html
@@ -1,3 +1,5 @@
+<couchinn-header></couchinn-header>
+
 <form name="userForm">
   <div layout-gt-sm="row">
     <md-input-container class="md-block" flex-gt-sm>
