--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -6,6 +6,6 @@
 
     <md-button class="md-raised" ng-click="go('/register')">Registrate</md-button>
     <md-button class="md-raised" ng-click="go('/login')">Iniciar Sesión</md-button>
-    <md-button class="md-raised" ng-click="go('/tipoHospedaje')">Tipo de Hospedaje</md-button>
+    <md-button class="md-raised" ng-click="go('/nuevoTipoHospedaje')">Nuevo Tipo de Hospedaje</md-button>
   </div>
 </md-toolbar>
