--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-medium-tall" >
+<md-toolbar class="md-medium-tall">
   <div class="md-toolbar-tools">
     <span flex></span>
 
@@ -6,6 +6,7 @@
 
     <md-button class="md-raised" ng-click="go('/register')">Registrate</md-button>
     <md-button class="md-raised" ng-click="go('/login')">Iniciar Sesión</md-button>
+    <md-button class="md-raised" ng-click="logout()">Cerrar Sesión</md-button>
     <md-button class="md-raised" ng-click="go('/tipoHospedaje')">Tipo de Hospedaje</md-button>
   </div>
 </md-toolbar>
