Se abre nuevo Branch

--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -1,11 +1,9 @@
 <md-toolbar class="md-medium-tall" >
   <div class="md-toolbar-tools">
     <span flex></span>
-
-
-
     <md-button class="md-raised" ng-click="go('/register')">Registrate</md-button>
     <md-button class="md-raised" ng-click="go('/login')">Iniciar Sesión</md-button>
     <md-button class="md-raised" ng-click="go('/nuevoTipoHospedaje')">Nuevo Tipo de Hospedaje</md-button>
+    <md-button class="md-raised" ng-click="go('/listadoTipoHospedaje')">Listado de Tipos de Hospedaje</md-button>
   </div>
 </md-toolbar>
