actualicé los modulos de registrarse y de login y userlogged para configurar los botones de acuerdo a cada pantalla

--- a/public/app/loggedUser/src/html/loggedUser.html
+++ b/public/app/loggedUser/src/html/loggedUser.html
@@ -1,4 +1,4 @@
-<couchinn-header></couchinn-header>
+<couchinn-header buttons="headerButtons"></couchinn-header>
 
 <md-card>
   <h1>Bienvenido al sitio CouchIn para usuarios registrados</h1>
