--- a/public/app/register/src/html/register.html
+++ b/public/app/register/src/html/register.html
@@ -1,4 +1,4 @@
-<couchinn-header></couchinn-header>
+<couchinn-header buttons="headerButtons"></couchinn-header>
 
 <form name="userForm">
   <div layout-gt-sm="row">
