--- a/public/app/couchInn/src/html/couchinn.html
+++ b/public/app/couchInn/src/html/couchinn.html
@@ -1,1 +1,10 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
+<div style="width:100%">
+  <div class="wraper">
+    <h1>Que es couchinn</h1>
+    <p>Couchinn es una web diseñada con el fin de conectar gente que quiera ofrecer un espacio en su hogar para alojar a visitantes con viajeros
+      que busquen convivir con nativos del lugar compartiendo sus tradiciones y costumbres. Asi poder conocer este maravilloso pais que es la argentina.</p><br>
+    Couchinn es un proyecto independiente sustentado por donaciones.
+  </div>
+</div>
+
