--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -1,7 +1,12 @@
 <md-toolbar class="md-medium-tall" >
   <div class="md-toolbar-tools">
     <span flex></span>
-
+    <!-- logo -->
+    <div layout="row" flex="100">
+      <md-button class="md-raized" ng-click="go('/')">
+        <img id="logo" src="/images/Couchinn.png"></img>
+      </md-button>
+    </div>
 
 
     <md-button
