mejore mensaje de error

--- a/public/app/login/src/html/login.html
+++ b/public/app/login/src/html/login.html
@@ -4,7 +4,7 @@
   <div layout-gt-sm="row">
     <md-input-container class="md-block" flex-gt-sm>
       <label>Username</label>
-      <input ng-model="username" type="text" name="username" required>
+      <input ng-model="username" type="email" name="username" required>
     </md-input-container>
     <md-input-container class="md-block" flex-gt-sm>
       <label>Password</label>
