--- a/public/app/tipoHospedaje/src/html/nuevoTipoHospedaje.html
+++ b/public/app/tipoHospedaje/src/html/nuevoTipoHospedaje.html
@@ -12,5 +12,6 @@
   </div>
 
   <button type="submit" class="btn btn-success btn-lg" ng-click="guardarTipoHosp()" ng-disabled="!tipoHospedaje.nombre  || !tipoHospedaje.capacidadMax || !tipoHospedaje.capacidadMax > 0">Guardar Tipo de Hospedaje</button>
-
+  <label>{{tipoHospedajeEncontrado.nombre}}</label>
+  <label>{{tipoHospedajeEncontrado.capacidadMax}}</label>
 </form>
