--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -2,10 +2,8 @@
   <div class="md-toolbar-tools">
     <span flex></span>
     <!-- logo -->
-    <div layout="row" flex="100">
-      <md-button class="md-raized" ng-click="go('/')">
-        <img id="logo" src="/images/Couchinn.png"></img>
-      </md-button>
+    <div layout="row"  ng-click="go('/')">
+        <img id="logo" src="/images/Couchinn.png" ></img>
     </div>
 
 
