--- a/public/app/buscar/src/html/buscar.html
+++ b/public/app/buscar/src/html/buscar.html
@@ -1,3 +1,42 @@
-<couchinn-header buttons="headerButtons"></couchinn-header>
+<form name="form" id="form">
+
+  <md-input-container>
+    <md-select
+      ng-model="searchFilter.type"
+      placeholder="Seleccionar tipo de hospedaje">
+      <md-option
+        ng-value="opt"
+        ng-repeat="type in typesOfLodging ">{{ type }}</md-option>
+    </md-select>
+  </md-input-container>
+
+  <md-slider ng-model="searchFilter.range" min="1" max="30">
+  </md-slider>
+
+  <md-input-container>
+    <label>Lugar</label>
+    <input type="text" ng-model="searchFilter.name" required md-maxlength="50">
+  </md-input-container>
+
+  <md-content>
+    <md-datepicker
+      ng-model="myDate"
+      md-placeholder="fecha inicial"
+      md-min-date="minDate"
+      md-max-date="maxDate">
+    </md-datepicker>
+  </md-content>
+
+  <md-content>
+    <md-datepicker
+      ng-model="myDate"
+      md-placeholder="fecha final"
+      md-min-date="minDate"
+      md-max-date="maxDate">
+    </md-datepicker>
+  </md-content>
 
 
+  <md-button ng-disabled="form.$invalid" ng-click="search()"> Buscar</md-button>
+
+</form>
