arreglé la registracion, faltaba hacer requerido la fecha de nacimiento y hacer que el username sea el mail

--- a/public/app/register/src/html/register.html
+++ b/public/app/register/src/html/register.html
@@ -13,6 +13,7 @@
     <md-datepicker ng-model="user.nacimiento"
                    md-placeholder="Nacimiento" >
     </md-datepicker>
+    <input type="hidden" ng-model="user.nacimiento" required>
   </div>
 
   <div layout-gt-sm="row">
