complete la lógica del componente buscar del front

--- a/public/app/buscar/src/html/resultados.html
+++ b/public/app/buscar/src/html/resultados.html
@@ -1,7 +1,8 @@
 <div layout="column">
   <div flex ng-repeat="publicacion in publicaciones" class="publicacion">
     <publicacion
-      data="publicacion">
+      data="publicacion"
+    >
     </publicacion>
   </div>
 </div>
