Donar, mis donaciones, publicar y mis publicaciones

--- a/public/app/couchInn/src/html/couchinn.html
+++ b/public/app/couchInn/src/html/couchinn.html
@@ -1,10 +1,20 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
 <div style="width:100%">
-  <div class="wraper">
-    <h1>Que es couchinn</h1>
-    <p>Couchinn es una web diseñada con el fin de conectar gente que quiera ofrecer un espacio en su hogar para alojar a visitantes con viajeros
-      que busquen convivir con nativos del lugar compartiendo sus tradiciones y costumbres. Asi poder conocer este maravilloso pais que es la argentina.</p><br>
-    Couchinn es un proyecto independiente sustentado por donaciones.
+  <div class="heading">Acerca de CouchInn</div>
+  <div class="panel-body">
+    <div class="row" style="padding-left:70px;padding-right:70px;">
+      <h3>Acerca de Nuestro Proyecto</h3>
+      <p>CouchInn es un sistema a través del cual personas de todo el país ofrecen alojamiento en sus domicilios para personas que busquen viajar por Argentina, reduciendo de esta manera los gastos de hospedaje.</p>
+      <p>A través de CouchInn los usuarios podrán ofrecer alojamiento en sus inmuebles aclarando características relevantes al tipo de hospedaje del que se trata, cantidad máxima de ocupantes y fecha en la que puede recibir visitantes, para luego elegir entre las solicitudes recibidas, al/los visitantes que deseen alojar. </p>
+      <p>El sitio permite el acceso a visitantes no registrados, que podrán ver las publicaciones, pero solo al registrarse se podra reservar u ofrecer alojamientos.</p>
+      <p>Debe destacarse que no se permite vender o alquilar servicios a travez de nuestro sistema. Ninguna publicacion podra tener un costo asociado, asi como el uso del sitio tambien es gratuito en su totalidad.</p><br />
+    </div>
+    <div class="row" style="padding-left:70px;padding-right:70px;">
+      <h3>Algo de historia</h3>
+      <p>Dos viajeros recurrentes, amantes de los intercambios culturales, idearon este sistema denominado CouchInn. El mismo busca conectar gente que quiere ofrecer un espacio en su hogar para alojar a visitantes con viajeros que busquen convivir con nativos del lugar compartiendo sus tradiciones y costumbres.</p>
+    </div>
+
   </div>
+</div>
 </div>
 
