--- a/public/app/header/src/html/header.html
+++ b/public/app/header/src/html/header.html
@@ -2,8 +2,8 @@
   <div class="md-toolbar-tools">
     <span flex></span>
     <!-- logo -->
-    <div layout="row"  ng-click="go('/')">
-        <img id="logo" src="/images/Couchinn.png" ></img>
+    <div layout="row">
+        <img class="logo" src="/images/Couchinn.png" ></img>
     </div>
 
 
