--- a/public/app/login/src/html/login.html
+++ b/public/app/login/src/html/login.html
@@ -1,5 +1,5 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
-
+<div class="heading">Iniciar Sesion</div>
 <form name="form">
   <div layout-gt-sm="row">
     <md-input-container class="md-block" flex-gt-sm>
