--- a/public/app/tipoHospedaje/src/html/listadoTipoHospedaje.html
+++ b/public/app/tipoHospedaje/src/html/listadoTipoHospedaje.html
@@ -1,4 +1,5 @@
-
+<couchinn-header buttons="headerButtons"></couchinn-header>
+<div class="heading">Lista de Tipos de Hospedajes</div>
 <div class="container">
 
   <div ng-init="tiposDeHospedaje = dameTiposDeHospedaje()">
@@ -11,11 +12,9 @@
       <table class="table table-striped">
         <tr class="info">
           <td>Nombre</td>
-          <td>Capacidad Máxima</td>
         </tr>
         <tr ng-repeat="tipoHos in tiposDeHospedaje" ng-click="">
           <td>  {{ tipoHos.nombre }}  </td>
-          <td>  {{ tipoHos.capacidadMax }}  </td>
         </tr>
       </table>
     </div>
