--- a/public/app/lodgin/src/html/myLodgins.html
+++ b/public/app/lodgin/src/html/myLodgins.html
@@ -18,7 +18,7 @@
         </tr>
         <tr ng-repeat="p in lodgins" ng-click="">
           <td>  {{ p.nombre }}  </td>
-          <td> {{ p.tipo }} </td>
+          <td> {{ p.tipo.nombre }} </td>
           <td>  {{ p.capacidadMax }}  </td>
           <td>  {{ p.fechaInicio }}  </td>
           <td>  {{ p.fechaFin }}  </td>
