--- a/public/app/lodgin/src/html/myLodgins.html
+++ b/public/app/lodgin/src/html/myLodgins.html
@@ -2,7 +2,7 @@
 <div class="heading">Lista de Publicaciones del Usuario</div>
 <div class="container">
   <div ng-init="lodgins = obtenerPublicaciones()">
-    
+
     <div class="col-sm-6 col-sm-offset-1 text-center">
       <table class="table table-striped">
         <tr class="info">
@@ -12,7 +12,10 @@
           <td>FechaInicio</td>
           <td>FechaFin</td>
         </tr>
-        <tr ng-repeat="lodgin in lodgins" ng-click="">
+        <tr ng-repeat="lodgin in lodgins"
+            class="publicacion-fila"
+            ng-class="{'premium': lodgin.user.premium}"
+        >
           <td>  {{ lodgin.nombre }}  </td>
           <td> {{ lodgin.tipo.nombre }} </td>
           <td>  {{ lodgin.capacidadMax }}  </td>
