--- a/public/app/buscar/src/html/resultados.html
+++ b/public/app/buscar/src/html/resultados.html
@@ -1,3 +1,5 @@
+<couchinn-header buttons="headerButtons"></couchinn-header>
+
 <div layout="column">
   <div flex ng-repeat="publicacion in publicaciones" class="publicacion">
     <publicacion
