agreguue harcodeado un email para mostrar en recuperar contraseña

--- a/public/app/login/src/html/recuperar-clave.html
+++ b/public/app/login/src/html/recuperar-clave.html
@@ -2,7 +2,7 @@
 <div layout="column">
   <div flex>
     <h1>Usted solicitó recuperar su contraseña</h1>
-    <h2>CouchInn le ha mandado un mail a {{ user.email }} para que recupere de allí su nueva contrseña</h2>
+    <h2>CouchInn le ha mandado un mail a user@user.com para que recupere de allí su nueva contrseña</h2>
   </div>
   <div flex>
     <md-button href="/#login"> volver</md-button>
