--- a/public/app/buscar/src/html/resultados.html
+++ b/public/app/buscar/src/html/resultados.html
@@ -8,3 +8,8 @@
     </publicacion>
   </div>
 </div>
+
+<h1 ng-if="publicaciones.length == 0" >
+  Lamentablemente no se encontraron coincidencias, vuelva a intentar con otros parámetros de búsqueda
+</h1>
+<a href="#/">Volver</a>
