--- a/public/app/buscar/src/html/resultados.html
+++ b/public/app/buscar/src/html/resultados.html
@@ -9,7 +9,8 @@
     <td>FechaInicio</td>
     <td>FechaFin</td>
   </tr>
-
+</table>
+<table>
   <div layout="column">
     <div flex ng-repeat="publicacion in publicaciones" class="publicacion">
       <publicacion
@@ -19,7 +20,9 @@
     </div>
   </div>
 
+
 </table>
+
 
 
 
