--- a/public/app/buscar/src/html/resultados.html
+++ b/public/app/buscar/src/html/resultados.html
@@ -15,6 +15,8 @@
     <div flex ng-repeat="publicacion in publicaciones" class="publicacion">
       <publicacion
         data="publicacion"
+        indice="$index"
+        publicaciones="publicaciones"
       >
       </publicacion>
     </div>
