agregué el buscar a la pagina del usuario logueado.

--- a/public/app/buscar/src/html/buscar.html
+++ b/public/app/buscar/src/html/buscar.html
@@ -22,7 +22,7 @@
     </md-input-container>
   </div>
 
-  <div layout-gt-sm="row">
+  <div>
     <md-content>
       <md-datepicker
         ng-model="searchFilter.fechaInicio"
