--- a/public/app/register/src/html/register.html
+++ b/public/app/register/src/html/register.html
@@ -3,7 +3,7 @@
 <form name="form" id="form">
   <div layout-gt-sm="row">
     <md-input-container class="md-block" flex-gt-sm>
-      <label>First name</label>
+      <label>Nombre</label>
       <input ng-model="user.nombre" name="nombre" ng-required="true">
     </md-input-container>
     <md-input-container class="md-block" flex-gt-sm>
@@ -23,7 +23,7 @@
     </md-input-container>
     <div layout-gt-sm="row">
       <md-input-container class="md-block" flex-gt-sm>
-        <label>password</label>
+        <label>contraseña</label>
         <input ng-model="user.password" type="password" ng-required="true" name="password">
       </md-input-container>
     </div>
