--- a/public/app/lodgin/src/html/myLodgins.html
+++ b/public/app/lodgin/src/html/myLodgins.html
@@ -9,24 +9,20 @@
           <td>Capacidad Máxima</td>
           <td>FechaInicio</td>
           <td>FechaFin</td>
-          <td>Activa</td>
         </tr>
         <tr ng-repeat="lodgin in lodgins"
-            ng-click="selectLodgin(lodgin)"
             class="publicacion-fila"
             ng-class="{'premium': lodgin.user.premium}"
-
         >
-          <td>  {{ lodgin.nombre }}  </td>
+          <td> <md-button ng-click="detalle($index)">{{ lodgin.nombre }} </md-button> </td>
           <td> {{ lodgin.tipo.nombre }} </td>
           <td>  {{ lodgin.capacidadMax }}  </td>
-          <td>  {{ lodgin.fechaInicio }}  </td>
-          <td>  {{ lodgin.fechaFin }}  </td>
-          <td>  {{ lodgin.activa }}  </td>
+          <td>  {{ lodgin.fechaInicio | date : shortDate}}  </td>
+          <td>  {{ lodgin.fechaFin | date : shortDate }}  </td>
+          <td><md-button ng-click="modificar($index)"> Modificar </md-button></td>
+          <td><md-button ng-click="eliminar($index)"> Eliminar </md-button></td>
         </tr>
       </table>
-      <button type="submit" class="btn btn-success btn-lg" ng-click="anularPublicacion()" ng-hide="!selectedAnular">Anular Publicacion</button>
-      <button type="submit" class="btn btn-success btn-lg" ng-click="habilitarPublicacion()" ng-hide="!selectedHabilitar">Habilitar Publicacion</button>
     </div>
   </div>
 </div>
