--- a/public/app/mis-solicitudes/src/html/mis-solicitudes.html
+++ b/public/app/mis-solicitudes/src/html/mis-solicitudes.html
@@ -1,12 +1,16 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
 
 <md-list>
-  <md-list-item class="md-2-line" ng-repeat="application in applications">
+  <md-list-item class="md-2-line solicitud" ng-repeat="application in applications">
     <div class="md-list-item-text">
-      <h3>{{application.lodgin.nombre}}</h3>
-      <p>{{application.lodgin.descripcion}}</p>
-      <p>{{application.fechaInicio | date : shortDate}}</p>
-      <p>{{application.fechaFin | date : shortDate}}</p>
+      <label for="nombre">Nombre del Couch:</label>
+      <h3 id="nombre"> {{application.lodgin.nombre}}</h3>
+      <label for="desc">Descripción del Couch:</label>
+      <p id="desc">{{application.lodgin.descripcion}}</p>
+      <label for="fechaIni">Fecha de Check IN:</label>
+      <p id="fechaIni">{{application.fechaInicio | date : shortDate}}</p>
+      <label for="fechaFin">Fecha de Check OUT:</label>
+      <p id="fechaFin">{{application.fechaFin | date : shortDate}}</p>
     </div>
   </md-list-item>
 </md-list>
