anulacion de publicacion terminada, bloqueo en generacion de solicitud por anulacion de publicacion

--- a/public/app/lodgin/src/html/lodginDetails.html
+++ b/public/app/lodgin/src/html/lodginDetails.html
@@ -26,6 +26,8 @@
     <li>{{ lodgin.fechaFin | date : shortDate }}</li>
     <b>Dueño</b>
     <li>{{ lodgin.user.email }}</li>
+    <b>Activa</b>
+    <li>{{ lodgin.activa }}</li>
     </ul>
   </div>
 </div>
