--- a/public/app/buscar/src/html/publicacion.html
+++ b/public/app/buscar/src/html/publicacion.html
@@ -7,11 +7,11 @@
     <td>  <md-button
             ng-click="detalle(indice)">
 
-          <md-tooltip
+   <!--       <md-tooltip
             md-direction="top"
             ng-if="isUserAnApplicant(data.nombre)">
             ¡Usted Aplicó para este couch!
-          </md-tooltip>
+          </md-tooltip>-->
 
           {{ data.nombre }}
 
